<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hapis_MihaelaClaudiaDiosan</string>
    <string name="name">HAPIS</string>
    <string name="API_KEY" templateMergeStrategy="preserve" translatable="false">AIzaSyCl1fruupMLaDB11EO0hHb2Ahx7rTYzwkA</string>
    <string name="content_description" translatable="false">Content description</string>
    <string name="text" translatable="false">text</string>
    <string name="phone_error_text"> Enter a valid phone number</string>
    <string name="mobile_connected">Mobile Connected!</string>
    <string name="wifi_connected">Wifi Connected!</string>
    <string name="no_network_operating">No Network Operating!</string>
    <string name="option_network">Do you want to close the application? </string>
    <string name="positive_button_network">CLOSE</string>
    <string name="negative_button_network">WAIT</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="logo_intro_title">HAPIS</string>
    <string name="donor_intro_title">DONOR</string>
    <string name="volunteer_intro_tile">VOLUNTEER</string>
    <string name="liquid_galaxy_intro_title">LIQUID GALAXY SYSTEM</string>
    <string name="logo_intro_description">This is a social app where you can donate resources to someone that really need it.</string>
    <string name="donor_intro_description">Become a donor and you will have the opportunity to see profiles of people in need and help them.</string>
    <string name="volunteer_intro_description">Be a volunteer and help to register and manage the profiles of people that need help.</string>
    <string name="liquid_galaxy_description">If you have a Liquid Galaxy System installed you can view all this info into a spectacular panoramic screens.</string>
    <string name="next_button">Next</string>
    <string name="get_started_button">GET STARTED</string>
    <string name="login_title">Login to continue</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_tex_view">Don\'t have an account yet?</string>
    <string name="sign_up">REGISTER NOW</string>
    <string name="liquid_galaxy_text">Here you can access the Liquid Galaxy System:</string>
    <string name="liquid_galaxy_tv">LIQUID GALAXY</string>
    <string name="email_error_text">Enter a valid email</string>
    <string name="error_login">Check your username or password</string>
    <string name="password_error_text">Introduce a valid password.Password must have at least 6 characters </string>
    <string name="progress_login">Starting session…</string>
    <string name="verify_email_error">Please, verify your email address to login!</string>
    <string name="forgot_password_name">Forgot password</string>
    <string name="fp_title">Forgot your password?</string>
    <string name="fp_body">To reset your password, enter the email address you use to login to HAPIS.</string>
    <string name="fp_email_hint">Email</string>
    <string name="fp_button">RECOVER PASSWORD</string>
    <string name="is_email_valid_error">The email field is not valid or is empty</string>
    <string name="pop_up_title">EMAIL SENT</string>
    <string name="pop_up_message">An email has been sent to the supplied email address.\nFollow the instructions in the email to reset your password.</string>
    <string name="pop_up_button">OK</string>
    <string name="fp_recover_failed">Fail to send reset password email!\Check that the email is correct</string>
    <string name="register_activity_name">Register</string>
    <string name="donor_cv_title">REGISTER AS DONOR</string>
    <string name="volunteer_cv_title">REGISTER AS VOLUNTEER</string>
    <string name="cv_more_button">KNOW MORE</string>
    <string name="cv_start_button">START</string>
    <string name="register_pop_up_button">OK</string>
    <string name="volunteer_know_more_title">What can you do if you register as volunteer?</string>
    <string name="volunteer_know_more_text">1. You can connect with people without resources who need our help \n\n
                                            2. You can create and manage profiles for them, since they do not always have a mobile phone connected to the Internet \n\n
                                            3. You can help to make the donation delivery in case the donors do not have the possibility to do it personally
    </string>
    <string name="donor_know_more_title">What can you do if you register as donor?</string>
    <string name="donor_know_more_text">1. You can help people without basic resources such as food, accommodation or clothing \n\n
                                  2. You can choose the profile of the person who most attracts your attention and help them \n\n
                                  3. You can donate food, clothing, accommodation, work or personal hygiene products \n\n
                                  4. You can deliver the aid personally or with the help of a volunteer</string>
    <string name="register_user_title">Create an account</string>
    <string name="register_user_pop_up_title">REGISTRATION SUCCESS</string>
    <string name="register_user_login_info">Login Info</string>
    <string name="register_user_optional_info">Optional Info</string>
    <string name="register_user_pop_up_message">Thank you. Please check your email to activate your account.</string>
    <string name="register_user_terms">I agree the <a href="https://freetexthost.net/cwlxbsV">Terms and Conditions</a> and the <a href="https://freetexthost.net/fDVzKMh">Privacy Policy</a></string>
    <string name="register_user_terms_error">You have to agree the Terms and conditions first!</string>
    <string name="register_user_username_hint">Username</string>
    <string name="register_user_email_hint">Email</string>
    <string name="register_user_password_hint">Password</string>
    <string name="register_user_first_name_hint">First Name</string>
    <string name="register_user_last_name_hint">Last Name</string>
    <string name="register_user_phone_number_hint">Phone number</string>
    <string name="register_user_button">REGISTER</string>
    <string name="register_user_pop_up_button">OK</string>
    <string name="register_pop_up_title">Please verify your email</string>
    <string name="register_pop_up_message">You\'re almost there!\n We sent you an email, just click on the link you received to complete your register.\n THANK YOU!</string>
    <string name="register_error">"Something went wrong!</string>
    <string name="user_exists">There already exists an account with this email address!</string>
    <string name="username_error_text">Enter a valid username. Username must have at least 4 characters</string>
    <string name="complete_life_toast">You have to fill this field</string>
    <string name="user_home_name">Volunteer</string>
    <string name="user_menu_home">Home</string>
    <string name="user_menu_donate">Donate</string>
    <string name="user_menu_profile">Profile</string>
    <string name="user_menu_configuration">Configuration</string>
    <string name="user_menu_logout">Logout</string>
    <string name="user_menu_contact">Contact</string>
    <string name="user_username_text_view">Username</string>
    <string name="user_email_text_view">Email</string>
    <string name="user_phone_text_view">Phone Number</string>
    <string name="configuration_menu">Configuration</string>
    <string name="more_menu_title">More</string>
    <string name="contact_menu">Contact</string>
    <string name="help_menu">Help</string>
    <string name="about_us_menu">About us</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_map">Map</string>
    <string name="bottom_nav_list_map">List Map</string>
    <string name="welcome_user">WELCOME,</string>
    <string name="user_profile_info">PROFILE INFO:</string>
    <string name="edit_button_toast">This button will let the volunteer edit the shown fields of the homeless</string>
    <string name="delete_button_toast">With this button the homeless profile will be deleted</string>
    <string name="welcome_vol">WELCOME TO</string>
    <string name="first_homeless">Go on the floating menu and select\n New homeless profile\n to create your first homeless profile.\n\n\n THANK YOU for your collaboration!</string>
    <string name="new_homeless_profile">New homeless profile</string>
    <string name="send_delivery_notification">Donations delivery</string>
    <string name="location_fragment_title">Next, search and select the location where the donors can find the homeless person </string>
    <string name="selected_location">You have selected the next location:</string>
    <string name="location_error_toast">You have to select a location</string>
    <string name="toast_save_btn">Your information saved correctly!</string>
    <string name="photo">Add your photo here</string>
    <string name="homeless_profile_fragment_username_hint">Username</string>
    <string name="homeless_profile_fragment_phone_number">Phone number (optional)</string>
    <string name="homeless_profile_fragment_birthday_hint">Birthday (optional) </string>
    <string name="homeless_profile_fragment_life_history_hint">Write something about you and your life experiences</string>
    <string name="homeless_profile_cancel_button">CANCEL</string>
    <string name="homeless_profile_save_button">SAVE</string>
    <string name="homeless_profile_add_photo">Add profile photo</string>
    <string name="chooser_gallery">Gallery</string>
    <string name="chooser_camera">Camera</string>
    <string name="chooser_cancel">Cancel</string>
    <string name="dialog_add_image">Add Image</string>
    <string name="dialog_select_file">Select File</string>
    <string name="select_photo_button">SELECT PROFILE PHOTO</string>
    <string name="life_hitory_error">Life History must be between 20 and 400 characters large.</string>
    <string name="uploading_photo">Uploading…</string>
    <string name="uploaded_photo">Uploaded</string>
    <string name="schedule_text">Write when the homeless could  be found on the previous selected location:</string>
    <string name="schedule_edit_text">Available days and hours </string>
    <string name="needs_text">Next, select the most important need of the homeless person in this moment:</string>
    <string name="most_important_need_tv">The  most important need selected is: </string>
    <string name="complete_schedule_toast">You have to complete the schedule</string>
    <string name="config_phone_number_hint">Phone number</string>
    <string name="config_phone_number_summary">Change your existing phone number or add a new one</string>
    <string name="profile_category">Profile Settings</string>
    <string name="network_category">Network Preferences</string>
    <string name="config_password_hint">Change password</string>
    <string name="config_password_summary">Change your password.You only have to enter the new password.</string>
    <string name="config_delete">Delete your account</string>
    <string name="config_delete_summary">By this you delete your account for ever.Are you sure?</string>
    <string name="delete_default_value" translatable="false">no</string>
    <string name="config_visualization">Visualization Settings</string>
    <string name="config_visualization_title">Choose deliveries visualization</string>
    <string name="config_visualization_summary">You can see deliveries for all homeless or only for homeless profiles created by you</string>
    <string name="title_map">Map</string>
    <string name="summary_map">Show map through network type</string>
    <string name="any_value">All</string>
</resources>