<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".login.ForgotPasswordActivity">


    <TextView
        android:id="@+id/fp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/fp_title_size"
        android:text="@string/fp_title"
        android:layout_marginTop="@dimen/top_margin"/>

    <TextView
        android:id="@+id/fp_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fp_body"
        android:textColor="@color/white"
        android:textSize="@dimen/fp_body_size"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginEnd="@dimen/right_margin"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fp_email_hint"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:layout_marginEnd="@dimen/right_margin"/>

        <Button
            android:id="@+id/recover_password_button"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/fp_button"
            android:textColor="@color/white"
            android:background="@drawable/btn_gradient_style"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:layout_marginEnd="@dimen/right_margin"/>

    </com.google.android.material.textfield.TextInputLayout>





</LinearLayout>







